css/global.css
@charset "UTF-8";
/* CSS Document */

/******************************* html5doctor.com Reset Stylesheet **************************/

/**
 * html5doctor.com Reset Stylesheet v1.6.1 (http://html5doctor.com/html-5-reset-stylesheet/)
 * Richard Clark (http://richclarkdesign.com)
 * http://cssreset.com
 */
html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code,
del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var,
b, i,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure,
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
    margin:0;
    padding:0;
    border:0;
    outline:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}
body {
    line-height:1;
}
article,aside,details,figcaption,figure,
footer,header,hgroup,menu,nav,section {
    display:block;
}
nav ul {
    list-style:none;
}
blockquote, q {
    quotes:none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content:'';
    content:none;
}
a {
    margin:0;
    padding:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}
/* change colours to suit your needs */

/*ins {
    background-color:#ff9;
    color:#000;
    text-decoration:none;
}*/

/* change colours to suit your needs */

/*mark {
    background-color:#ff9;
    color:#000;
    font-style:italic;
    font-weight:bold;
}
del {
    text-decoration: line-through;
}*/

/*abbr[title], dfn[title] {
    border-bottom:1px dotted;
    cursor:help;
}*/

table {
    border-collapse:collapse;
    border-spacing:0;
}

/* change border colour to suit your needs */

/*hr {
    display:block;
    height:1px;
    border:0;
    border-top:1px solid #cccccc;
    margin:1em 0;
    padding:0;
}
input, select {
    vertical-align:middle;
}*/

/*****************************************************************************/



/****************************** General Layout *******************************/
body {
	margin: 0;
	padding: 0;
	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
	font-size: 16px;
}

.container {
	margin: 0 auto;
	padding: 0;
	max-width: 990px;
	min-width: 480px;
}

.container-overflow {
	overflow: hidden;
	text-align: left;
}

.clearfloat {
	width: 100%;
	clear: both;
}

.inline-list {
	display: inline;
  	margin: 10px 0;
  	list-style: none;
}

.text-center {
	text-align: center;
}

p {
	margin: 10px 0;
	font-size: 1em;
}

h1 {
	font-size: 1.7em;
	font-weight: normal;
	color: #FFF;
	margin: 0.67em 0;
}

h2 {
	font-size: 1.4em;
}

h3 {
	font-size: 1.2em;
}

h4 {
	font-size: 1.1em;
	font-weight: bold;
}

h5 {
	font-size: 1em;
	font: normal italic Georgia, "Times New Roman", Times, serif;
}

h1 a, a:visited, a:hover {
	color: #FFF;
	text-decoration: none;
}

a, a:visited, a:hover, a:active {
	text-decoration: none;
}

/*****************************************************************************/



/*************************** Header, Navigation, & Footer *****************************/
header, footer {
	background: #600;
}

.header-left {
	width: 60%;
	float: left;
}

nav {
	width: 40%;
	float: left;
	margin: 1.2em 0;
}

.nav-list {
	margin: 0;
}

.nav-list li {
	list-style: none;
	margin: 0;
 	display: inline-block;
}

.nav-list a:link {
	color: #fff;
	display: inline-block;
	padding: 0.45em 0.5em;
 	border-radius: 0.25em;
2}

.nav-list a:hover,
.nav-list .active {
	background: #CF9;
	color: #600;
}

.socialmedia {
	width: 25%;
	min-width: 100px;
	float: right;
}

.footer-left {
	max-width: 742px;
	min-width: 200px;
	float: left;
}

.small-column {
	max-width: 247px;
	min-width: 100px;
	float: left;
	padding: 5px;
}

header, footer {
	color: #FFF;
}

.footer-text {
	font-size: 0.85em;
}

footer a, footer a:visited, footer a:hover, footer a:active {
	color: #FFF;
	font: bold;
}

nav a:hover, nav a:active {
	background: #CF9;
	color: #600;
}

/***************************************************************************/



/****************************** Content ***********************************/

.contentleft {
	width: 65%;
	float: left;
}

.content-inner {
	width: auto;
	margin: 1.5em 0 2em;
}

.content-inner a {
	color: #600;
	font: bold;
	text-decoration: none;
}

.contentright {
	width: 35%;
	color: #000;
	float: left;
}

.content-inner-right {
	margin-left: 3em;
}

/***************************************************************************/



/********************************** Images *********************************/
.image_right {
	width: auto;
	float: right;
	margin-top: 10px;
	margin-left: 10px;
	right: 0px;
	bottom: 0px;
}

.inner-shadow {
   -moz-box-shadow:    inset 0 0 10px #000000;
   -webkit-box-shadow: inset 0 0 10px #000000;
   box-shadow:         inset 0 0 10px #000000;
}

.bottom-shadow {
	-webkit-box-shadow: 0 8px 6px -6px #333;
	   -moz-box-shadow: 0 8px 6px -6px #333;
	        box-shadow: 0 8px 6px -6px #333;
}

/***************************************************************************/



/********************************** Alerts *********************************/
.alert {
	border-radius: 15px;
	text-align: center;
	width: auto;
	margin: 5px;
	padding: 2px;
	background-color: #CFF;
	border: solid #00F 3px;
}

.alert-victory {
	background-color: #DCFFC0;
	border: solid #0C3 3px;
}

.alert-warning {
	background-color: #FFC8BC;
	border: solid #F00 3px;
}

.alert-error {
	background-color: #FFF7BC;
	border: solid #F90 3px;
}

/************************************************************************/

